[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yodaflow"
version = "0.1.0"
description = "A lightweight declarative workflow engine with RBAC and CLI"
authors = [
    { name = "Adryan Taborda", email = "adryanftaborda@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "PyYAML>=6.0.2",
    "typer>=0.16.0",
    "rich>=14.0.0",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "anyio>=4.9.0",
    "starlette>=0.47.1",
    "requests>=2.32.4"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.17.0",
    "ruff>=0.12.4",
    "build>=1.2.2",
    "twine>=6.1.0"
]
api = [
    "fastapi>=0.116.1",
    "uvicorn>=0.30.1"
]

[project.scripts]
yodaflow = "yodaflow.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "B"]  # E: pycodestyle, F: pyflakes, B: bugbear

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers"
testpaths = ["tests"]

[tool.setuptools]
packages = ["yodaflow"]
include-package-data = true
